<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Activité principale-->
    <string name="app_name" translatable="false">TP2_Samuel_Emma</string>
    <string name="start_humidity">Start Humidity</string>
    <string name="start_temperature">Start Temperature</string>
    <string name="Messages" translatable="false">Messages</string>
    <string name="messages_textArea">Something Here</string>
    <string name="no_info_txt">No data found</string>
    <string name="success">Data was saved successfully!</string>
    <string name="error">Data was not loaded correctly</string>
    <string name="data_read">values have been saved.</string>
    <string name="btn_goBack">Save and go back</string>

    <!-- Activité température-->
    <string name="maxTemperature">High limit</string>
    <string name="minTemperature">Low limit</string>
    <string name="temperatureWelcome">Temperature values</string>
    <string name="dataActivityBtn">Save and return to main menu</string>

    <!-- Activité Humidité -->
    <string name="HumidityWelcome">Humidity Values</string>
    <string name="nbZones">Number of zones :</string>
    <string name="zone_info">Info on zone</string>
    <string name="Apply">Apply</string>

    <string-array name="zones">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <!-- Activité DataStats -->
    <string name="statsTitle">Sensor stats</string>
    <string name="humidityBtn">Humidity</string>
    <string name="temparatureBtn">Temperature</string>
    <string name="timeStamp">Current date:</string>
    <string name="backHome">Back to main menu</string>
    <string name="startStats">Start stats</string>
    <string name="confirmationH">Sensor stats for Humidity captor saved !</string>
    <string name="confirmationT">Sensor stats for Temperature captor saved !</string>

</resources>